add tycho compiler argument to include module java.xml explicitly